[package]
name = "joinstr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.8.0"
joinstr = { git = "https://github.com/pythcoiner/joinstr.git", rev = "62006a5" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
